Fix crash when closing KCM

The KCM widget and its children are destroyed before the KCModule is destroyed,
so by the time we destroy the KCModule accessing the widget crashes.

Instead save the state when the widget is destroyed.

BUG: 484667
(cherry picked from commit 926d933f86828bcd3b796939dd8060f9670079c9)