src/kcmdf.h
@@ -19,7 +19,6 @@ class KDiskFreeWidget : public KCModule
 
     public:
         explicit KDiskFreeWidget(QObject *parent, const KPluginMetaData &data);
-        ~KDiskFreeWidget() override;
 
     private:
         KDFWidget *mKdf;
