src/kdfwidget.cpp
@@ -99,6 +99,8 @@ KDFWidget::KDFWidget( QWidget *parent, bool init )
 
 KDFWidget::~KDFWidget()
 {
+    applySettings();
+
     delete m_listModel;
     delete m_sortModel;
     delete m_itemDelegate;
@@ -119,10 +121,8 @@ void KDFWidget::makeColumns( void )
 /******************************************************************/
 void KDFWidget::closeEvent(QCloseEvent *)
 {
-    applySettings();
     qApp->quit();
 }
-
 
 void KDFWidget::settingsChanged( void )
 {
